manifests/mlflow/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlflow
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
